--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,21 @@ aiosignal==1.3.2
 attrs==25.3.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
+contourpy==1.3.2
+cycler==0.12.1
 datasets==3.5.0
 dill==0.3.8
 filelock==3.18.0
+fonttools==4.58.1
 frozenlist==1.5.0
 fsspec==2024.12.0
 huggingface-hub==0.30.2
 idna==3.10
 Jinja2==3.1.6
+joblib==1.5.1
+kiwisolver==1.4.8
 MarkupSafe==3.0.2
+matplotlib==3.10.3
 mpmath==1.3.0
 multidict==6.4.3
 multiprocess==0.70.16
@@ -34,18 +40,23 @@ nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 packaging==24.2
 pandas==2.2.3
+pillow==11.2.1
 propcache==0.3.1
 psutil==7.0.0
 pyarrow==19.0.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.3
 setuptools==78.1.0
 six==1.17.0
 sympy==1.13.1
+threadpoolctl==3.6.0
 tokenizers==0.21.1
 torch==2.6.0
 tqdm==4.67.1
