--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,67 @@
-accelerate==1.6.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.16
-aiosignal==1.3.2
-attrs==25.3.0
-certifi==2025.1.31
-charset-normalizer==3.4.1
-contourpy==1.3.2
+accelerate==1.12.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+contourpy==1.3.3
 cycler==0.12.1
-datasets==3.5.0
-dill==0.3.8
-filelock==3.18.0
-fonttools==4.58.1
-frozenlist==1.5.0
-fsspec==2024.12.0
-huggingface-hub==0.30.2
-idna==3.10
+filelock==3.20.0
+fonttools==4.60.1
+fsspec==2025.10.0
+hf-xet==1.2.0
+huggingface-hub==0.36.0
+idna==3.11
+iniconfig==2.3.0
 Jinja2==3.1.6
-joblib==1.5.1
-kiwisolver==1.4.8
-MarkupSafe==3.0.2
-matplotlib==3.10.3
+joblib==1.5.2
+kiwisolver==1.4.9
+MarkupSafe==3.0.3
+matplotlib==3.10.7
 mpmath==1.3.0
-multidict==6.4.3
-multiprocess==0.70.16
-networkx==3.4.2
-numpy==2.2.4
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-cusparselt-cu12==0.6.2
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
-packaging==24.2
-pandas==2.2.3
-pillow==11.2.1
-propcache==0.3.1
-psutil==7.0.0
-pyarrow==19.0.1
-pyparsing==3.2.3
+networkx==3.5
+numpy==2.3.5
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.3.20
+nvidia-nvtx-cu12==12.8.90
+packaging==25.0
+pandas==2.3.3
+pillow==12.0.0
+pluggy==1.6.0
+protobuf==6.33.1
+psutil==7.1.3
+Pygments==2.19.2
+pyparsing==3.2.5
+pytest==9.0.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.3
-safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.15.3
-setuptools==78.1.0
+PyYAML==6.0.3
+regex==2025.11.3
+requests==2.32.5
+safetensors==0.7.0
+scikit-learn==1.7.2
+scipy==1.16.3
+setuptools==80.9.0
 six==1.17.0
-sympy==1.13.1
+sympy==1.14.0
+tensorboardX==2.6.4
 threadpoolctl==3.6.0
-tokenizers==0.21.1
-torch==2.6.0
+tokenizers==0.22.1
+torch==2.9.1
 tqdm==4.67.1
-transformers==4.51.3
-triton==3.2.0
-typing_extensions==4.13.2
+transformers==4.57.1
+tree-sitter==0.25.2
+tree-sitter-languages==1.10.2
+triton==3.5.1
+typing_extensions==4.15.0
 tzdata==2025.2
-urllib3==2.4.0
-xxhash==3.5.0
-yarl==1.19.0
+urllib3==2.5.0
